--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,4 +3,9 @@ spring:
     url: jdbc:h2:mem:test
   liquibase:
     contexts: dev
-    change-log: classpath:db/changelog/master.xml
+  web:
+    resources:
+      static-locations: classpath:/static/,file:uploads/
+app:
+  storage:
+    location: uploads
