--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,6 @@
 spring:
-  datasource:
-    url: jdbc:h2:mem:test
+  jpa:
+    hibernate:
+      ddl-auto: validate
   liquibase:
-    contexts: dev
     change-log: classpath:db/changelog/master.xml
-  web:
-    resources:
-      static-locations: classpath:/static/,file:uploads/
-app:
-  storage:
-    location: uploads
