--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,12 +1,18 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/movieclub
-    username: root
-    password: admin
+    url: ${db.url}
+    username: ${db.username}
+    password: ${db.password}
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: validate
   liquibase:
     contexts: prod
   config:
-    import: cloud.properties
+    import: cloud.properties, db.properties
 app:
   cloudinary:
     cloud-name: ${cloud_name}
